crates/oxc_react_compiler/tests/snapshots/transitive-alias-fields.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/transitive-alias-fields.js
---
function component() {
	const x = {};
	const p = {};
	const q = {};
	const y = {};
	x.y = y;
	p.y = x.y;
	q.y = p.y;
	mutate(q);
}
