crates/oxc_react_compiler/tests/snapshots/try-catch-alias-try-values.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/try-catch-alias-try-values.js
---
import { c as _c } from "react/compiler-runtime";
const { throwInput } = require("shared-runtime");
function Component(props) {
	const $ = _c(1);
	let x;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		let y;
		x = [];
		;
		try {
			throwInput(x);
		} catch (t0) {
			const e = t0;
			y = e;
		}
		y.push(null);
		$[0] = x;
	} else {
		x = $[0];
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{}]
};
