crates/oxc_react_compiler/tests/snapshots/try-catch-empty-try.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/try-catch-empty-try.js
---
function Component(props) {
	const x = props.default;
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ default: 42 }]
};
