crates/oxc_react_compiler/tests/snapshots/try-catch-local-captured-by-nested-arrow.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/try-catch-local-captured-by-nested-arrow.js
---
import { c as _c } from "react/compiler-runtime";
function Component(t0) {
	const $ = _c(2);
	const { nodes } = t0;
	try {
		doSomething();
	} catch {
		let paragraphNode;
		if ($[0] !== nodes) {
			paragraphNode = createParagraphNode();
			nodes.forEach((node) => paragraphNode.append(node));
			$[0] = nodes;
			$[1] = paragraphNode;
		} else {
			paragraphNode = $[1];
		}
		return paragraphNode;
	}
	return null;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ nodes: [] }]
};
