crates/oxc_react_compiler/tests/snapshots/try-catch-logical-expression.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
assertion_line: 46
input_file: crates/oxc_react_compiler/fixtures/try-catch-logical-expression.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Todo: Support value blocks (conditional, logical, optional chaining, etc) within a try/catch statement", labels: One([LabeledSpan { label: None, span: SourceSpan { offset: SourceOffset(0), length: 227 }, primary: false }]), help: None, note: None, severity: Warning, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
